fixed box spacing

--- a/css/style.css
+++ b/css/style.css
@@ -146,7 +146,7 @@ body {
 @media (min-width: 992px) {
   .container {
     max-width: 942px;
-    padding: 2% 50px; } }
+    padding: 0 50px; } }
 
 @media (min-width: 1250px) {
   body {
@@ -176,7 +176,7 @@ body {
   flex-grow: 1;
   -ms-flex-preferred-size: 11em;
   flex-basis: 11em;
-  margin: 0 1% 3% 1%; }
+  margin: 0 1% 2% 1%; }
 
 .demo .column {
   padding: 1em;
