--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -25,7 +25,7 @@ body {
 
     .container {
         max-width: $breakpoint-medium - 50;
-        padding: 2% 50px;
+        padding: 0 50px;
     }
 }
 
@@ -42,13 +42,13 @@ body {
 
 /* GRID */
 
-$grid-column-gap: 1%;
+$grid-column-gap: 2%;
 
 .row {
     display: flex;
     flex-wrap: wrap;
-    margin-left:-$grid-column-gap;
-    margin-right:-$grid-column-gap;
+    margin-left:-$grid-column-gap/2;
+    margin-right:-$grid-column-gap/2;
     align-content: center;
     justify-content: center;
 }
@@ -56,7 +56,7 @@ $grid-column-gap: 1%;
 .row > .column {
     flex-grow: 1;
     flex-basis: 11em;
-    margin: 0 $grid-column-gap $grid-column-gap+2 $grid-column-gap;
+    margin: 0 $grid-column-gap/2 $grid-column-gap $grid-column-gap/2;
 }
 
 //FOR DEMO PURPOSES
@@ -65,3 +65,4 @@ $grid-column-gap: 1%;
     background: $column-color;
     text-align: center;
 }
+
